# ParseMe

./: .gitignore  ChangeLog.md  LICENSE  ParseMe.cabal  README.md  hie.yaml
app/: Main.hs
src/: Parser.hs
src/Parser/: Combinators.hs  Types.hs
src/Parser/Combinators/: Markdown.hs  Math.hs  Other.hs  Primitive.hs
src/Parser/Types/: Markdown.hs  Parser.hs
test/: Spec.hs
