cabal-version: 2.2

name:           ParseMe
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JeremyBois/ParseMe#readme>
homepage:       https://github.com/JeremyBois/ParseMe#readme
bug-reports:    https://github.com/JeremyBois/ParseMe/issues
author:         Jérémy Bois
maintainer:     jeremy@bois.com
copyright:      2021 Jérémy Bois
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/JeremyBois/ParseMe

common common-options
  build-depends:        base >= 4.11 && < 4.15
                      , text ^>= 1.2.3.0
                      , unicode-show

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -- Remove optimisations
                       -O0
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  OverloadedStrings
                       ScopedTypeVariables
                       InstanceSigs
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       ViewPatterns

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
      Parser
      Parser.Combinators
      Parser.Types
  build-depends:
      transformers
  other-modules:
      Parser.Combinators.Primitive
      Parser.Combinators.Markdown
      Parser.Combinators.Other
      Parser.Types.Parser
      Parser.Types.Markdown

executable ParseMe-exe
  import:              common-options
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       ParseMe
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ParseMe-test
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:
      ParseMe
    , hspec >= 2.4.8
    , QuickCheck
    , quickcheck-instances

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
